modified .gitignore app.py render.yalm requirements.txt new file build.sh

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-venv/
+# Environment variables
+.env
+
+# Python
 __pycache__/
 *.pyc
-.env
+*.pyo
+*.pyd
+
+# Local Database
+portfolio.db
+instance/
+
+# Virtual environment
+.venv/
