--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,13 @@ services:
   - type: web
     name: portfolio-backend
     env: python
-    buildCommand: ""
-    startCommand: "python app.py"
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn app:app"
     plan: free
     envVars:
       - key: FLASK_ENV
-        value: development
+        value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: portfolio-db # IMPORTANT: Create a PostgreSQL DB on Render named 'portfolio-db'
+          property: connectionString
