--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.1.0
+gunicorn==22.0.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 importlib_metadata==8.5.0
@@ -18,9 +19,11 @@ Mako==1.3.10
 MarkupSafe==2.1.5
 packaging==25.0
 pbr==6.1.1
+psycopg2-binary==2.9.9
 pipenv==2024.4.1
 pipenv-to-requirements==0.9.0
 platformdirs==4.3.6
+python-dotenv==1.0.1
 PyJWT==2.9.0
 SQLAlchemy==2.0.41
 typing_extensions==4.13.2
