--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ filelock==3.16.1
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
+Flask-Mail==0.9.1
 Flask-Migrate==4.1.0
 gunicorn==22.0.0
 Flask-SQLAlchemy==3.1.1
@@ -20,8 +21,6 @@ MarkupSafe==2.1.5
 packaging==25.0
 pbr==6.1.1
 psycopg2-binary==2.9.9
-pipenv==2024.4.1
-pipenv-to-requirements==0.9.0
 platformdirs==4.3.6
 python-dotenv==1.0.1
 PyJWT==2.9.0
