--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
         value: production
       - key: DATABASE_URL
         fromDatabase:
-          name: portfolio-db # IMPORTANT: Create a PostgreSQL DB on Render named 'portfolio-db'
+          name: portfolio-db 
           property: connectionString
       - key: MAIL_SERVER
         value: smtp.gmail.com
@@ -19,4 +19,4 @@ services:
       - key: MAIL_USERNAME
         value: "iamtjayearl@gmail.com"
       - key: MAIL_PASSWORD
-        sync: false # Set this secret in the Render dashboard
+        sync: false 
